Add nav html and style

--- a/index.html
+++ b/index.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navigation</title>
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <main>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Categories</a>
+
+            <ul class="sub-nav-list">
+              <li class="nav-item sub-nav-item">
+                <a href="#" class="nav-link sub-nav-link">Men</a>
+              </li>
+              <li class="nav-item sub-nav-item">
+                <a href="#" class="nav-link sub-nav-link">Women</a>
+               
+                <ul class="second-nav-list">
+                  <li class="nav-item second-nav-item">
+                    <a href="#" class="nav-link second-nav-link">Dress</a>
+                  </li>
+                  <li class="nav-item second-nav-item">
+                    <a href="#" class="nav-link second-nav-link">Pants</a>
+                  </li>
+                  <li class="nav-item second-nav-item">
+                    <a href="#" class="nav-link second-nav-link">Shoes</a>
+                  </li>
+                </ul>
+
+              </li>
+              <li class="nav-item sub-nav-item">
+                <a href="#" class="nav-link sub-nav-link">Kids</a>
+              </li>
+            </ul>
+
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <article class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+        architecto animi aliquam cum iusto expedita nobis assumenda, suscipit
+        reprehenderit tempora voluptatem ipsum accusantium. Commodi maiores
+        soluta perspiciatis nulla iusto pariatur, alias fugit quas dicta saepe
+        odio rerum quidem necessitatibus doloremque facilis quis aut magni
+        adipisci quia vitae. Unde ratione possimus cumque enim? Asperiores
+        incidunt, dolorem impedit dolorum accusantium libero quibusdam
+        voluptatem quisquam laborum illo repellendus, inventore iste error nam?
+        Hic quo facere consequatur odit, perferendis in ab earum consectetur
+        dolore voluptatum, quas debitis! Aut, dicta! Nam modi animi atque
+        veritatis laboriosam minima dicta molestias aut fugit officiis esse
+        exercitationem enim ipsum corrupti suscipit, numquam harum perferendis
+        sunt quod asperiores tempora cumque. Unde consectetur at iusto
+        blanditiis, perferendis exercitationem dicta ullam cupiditate dolor. Est
+        neque provident ipsum quam quae iure, exercitationem, aliquam itaque
+        minus odit libero! Modi quas illum reiciendis dolor, molestiae
+        reprehenderit porro? Soluta dignissimos natus eos nesciunt! Iure laborum
+        nobis facere! Perferendis asperiores consectetur quasi at? Rerum
+        nesciunt magni soluta optio nobis recusandae ducimus omnis impedit
+        culpa. Rem facere in minus odio ullam iste saepe temporibus architecto
+        repellendus ea aut quibusdam provident totam, explicabo, atque laborum
+        animi quia debitis tempore magnam. Accusamus totam eligendi cum quos
+        alias aspernatur voluptatibus.
+      </article>
+    </main>
+  </body>
 </html>
