Add fix borders

--- a/index.html
+++ b/index.html
@@ -15,44 +15,42 @@
           <li class="nav-item">
             <a href="#" class="nav-link">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item marg-left">
             <a href="#" class="nav-link">Categories</a>
 
             <ul class="sub-nav-list">
               <li class="nav-item sub-nav-item">
                 <a href="#" class="nav-link sub-nav-link">Men</a>
               </li>
-              <li class="nav-item sub-nav-item">
+              <li class="nav-item sub-nav-item marg-top">
                 <a href="#" class="nav-link sub-nav-link">Women</a>
-               
+
                 <ul class="second-nav-list">
                   <li class="nav-item second-nav-item">
                     <a href="#" class="nav-link second-nav-link">Dress</a>
                   </li>
-                  <li class="nav-item second-nav-item">
+                  <li class="nav-item second-nav-item marg-top">
                     <a href="#" class="nav-link second-nav-link">Pants</a>
                   </li>
-                  <li class="nav-item second-nav-item">
+                  <li class="nav-item second-nav-item marg-top">
                     <a href="#" class="nav-link second-nav-link">Shoes</a>
                   </li>
                 </ul>
-
               </li>
-              <li class="nav-item sub-nav-item">
+              <li class="nav-item sub-nav-item marg-top">
                 <a href="#" class="nav-link sub-nav-link">Kids</a>
               </li>
             </ul>
-
           </li>
-          <li class="nav-item">
+          <li class="nav-item marg-left">
             <a href="#" class="nav-link">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item marg-left">
             <a href="#" class="nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <article class="text">
+      <article>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
         architecto animi aliquam cum iusto expedita nobis assumenda, suscipit
         reprehenderit tempora voluptatem ipsum accusantium. Commodi maiores
